--- a/client/src/styles/components.scss
+++ b/client/src/styles/components.scss
@@ -39,10 +39,9 @@
 }
 
 %message {
-  padding: 1rem;
-  margin-bottom: 1rem;
+  padding: .5rem;
+  margin-bottom: .5rem;
   width: 90%;
-  border-radius: .25rem;
   text-align: center;
 }
 
